--- a/client/.gitignore
+++ b/client/.gitignore
@@ -10,6 +10,9 @@
 .idea/vcs.xml
 .idea/jsLibraryMappings.xml
 
+dist
+node_modules
+
 # Sensitive or high-churn files:
 .idea/dataSources.ids
 .idea/dataSources.xml
