--- a/client/package.json
+++ b/client/package.json
@@ -41,5 +41,10 @@
     "ember-resolver": "^2.0.3",
     "ember-welcome-page": "^1.0.1",
     "loader.js": "^4.0.1"
+  },
+  "dependencies": {
+    "ember-cli-select": "0.0.2",
+    "faker": "^3.1.0",
+    "mirage": "0.0.6"
   }
 }
