--- a/client/package.json
+++ b/client/package.json
@@ -35,15 +35,17 @@
     "ember-cli-release": "^0.2.9",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
+    "ember-cli-underscore": "0.0.3",
     "ember-data": "^2.6.0",
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.5.1",
     "ember-resolver": "^2.0.3",
+    "ember-select-2": "1.3.0",
     "ember-welcome-page": "^1.0.1",
-    "loader.js": "^4.0.1"
+    "loader.js": "^4.0.1",
+    "underscore": "^1.8.3"
   },
   "dependencies": {
-    "ember-cli-select": "0.0.2",
     "faker": "^3.1.0",
     "mirage": "0.0.6"
   }
