--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "mongoose": "^4.5.2"
   },
   "devDependencies": {
-    "body-parser": "^1.15.2"
+    "body-parser": "^1.15.2",
+    "underscore": "^1.8.3"
   }
 }
